--- a/gallerie/src/App.css
+++ b/gallerie/src/App.css
@@ -1,28 +1,16 @@
-.App {
-  text-align: center;
+.body {
+  position: absolute;
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+@media screen and (min-width: 768px) {
+  .body {
+    margin: 0 15%;
+  }
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.container {
+  background-color: #fff;
 }
