--- a/gallerie/src/index.css
+++ b/gallerie/src/index.css
@@ -3,3 +3,47 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.main {
+  height: 100%;
+  width: 100%;
+}
+
+p {
+  font-family: serif;
+  color: #8e8e8e;
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.content > p, .content > div {
+  margin: 0 5%;
+  text-align: justify;
+  line-height: 1.5;
+}
+
+@media screen and (min-width: 768px) {
+  .content {
+    margin-top: 0;
+  }
+
+  .content > p, .content > div {
+    text-align: left;
+    margin: 0;
+  }
+}
+
+.header-title {
+  font-family: serif;
+  text-transform: uppercase;
+  font-size: 26px;
+  color: #8e8e8e;
+  text-align: right;
+  background: linear-gradient(-90deg, #fff, #eee);
+  margin: 0 0 30px;
+  padding: 7px 10px 2px;
+}
