--- a/gallerie/src/App.css
+++ b/gallerie/src/App.css
@@ -1,14 +1,8 @@
 .body {
   position: absolute;
-  overflow: hidden;
   height: 100%;
+  width: 100%;
   margin: 0;
-}
-
-@media screen and (min-width: 768px) {
-  .body {
-    margin: 0 15%;
-  }
 }
 
 .container {
