--- a/gallerie/src/components/pages/Demo/demo.css
+++ b/gallerie/src/components/pages/Demo/demo.css
@@ -1,1 +1,176 @@
+.demo-title {
+  text-transform: uppercase;
+  font-size: 0.55em;
+  padding: 0 0 0 10px;
 
+}
+
+.demo-sub-title {
+  text-decoration: underline;
+}
+
+.content-body {
+  padding: 0 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .content-body {
+    padding: 0;
+  }
+}
+
+
+.room {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.9);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 2px 2px 22px 0px rgba(194,194,194,1);
+
+}
+
+.room_nav {
+  height: 50px;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+  font-family: serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  background: linear-gradient(-90deg, #fff, #ececec);
+  margin: 0;
+}
+
+.room_nav-title {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+  height: 30px;
+  display: block;
+  left: 10px;
+  color: #8e8e8e;
+  font-size: 1em;
+  width: 90%;
+  text-align: left;
+}
+
+@media screen and (min-width: 768px) {
+  .room_nav-title {
+    font-size: 1.5em;
+    width: 100%;
+  }
+}
+
+.close {
+  right: 20px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 30px;
+  cursor: pointer;
+}
+
+.close-img {
+  height: 30px;
+  width: 30px;
+}
+
+.info {
+  display: inline-block;
+  padding: 0 0 0 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.info-img {
+  height: 20px;
+  width: 20px;
+  margin-bottom: -2px;
+}
+
+.room_nav-description-text {
+  margin: 0;
+  padding: 0;
+}
+
+.room_nav-description {
+  position: absolute;
+  padding: 10px 30px 10px 20px;
+  display: block;
+  background: #fff;
+  margin: -7px;
+  line-height: 2;
+  border-top: 1px solid #ededed;
+}
+
+.room_slider {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.room_slider-img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .room_slider-img {
+      width: 50%;
+  }
+}
+
+.room_item {
+  list-style-type: none;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  margin: 10px 0 0 0;
+  padding: 10px;
+  cursor: pointer;
+  text-align: left;
+}
+
+.room_item a, .select {
+  font-family: serif;
+  text-transform: uppercase;
+  color: #8e8e8e;
+  text-decoration: none;
+}
+
+.select {
+  margin: 0;
+  font-size: 1.2em;
+}
+
+.room_preview-active {
+  display: block;
+}
+
+.room_preview {
+  width: 100%;
+  display: inline-block;
+}
+
+@media screen and (min-width: 768px) {
+  .room_preview {
+    width: 33.3%;
+  }
+}
+
+.room_preview-img {
+  width: 100%;
+}
