--- a/gallerie/src/index.css
+++ b/gallerie/src/index.css
@@ -6,7 +6,12 @@ body {
 
 .main {
   height: 100%;
-  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .main {
+    margin: 0 15%;
+  }
 }
 
 p {
@@ -15,21 +20,16 @@ p {
 }
 
 .content {
-  position: absolute;
   width: 100%;
-  margin-top: 30px;
+  margin-top: 0;
 }
 
 .content > p, .content > div {
-  margin: 0 5%;
   text-align: justify;
   line-height: 1.5;
 }
 
 @media screen and (min-width: 768px) {
-  .content {
-    margin-top: 0;
-  }
 
   .content > p, .content > div {
     text-align: left;
@@ -42,7 +42,6 @@ p {
   text-transform: uppercase;
   font-size: 26px;
   color: #8e8e8e;
-  text-align: right;
   background: linear-gradient(-90deg, #fff, #eee);
   margin: 0 0 30px;
   padding: 7px 10px 2px;
