--- a/gallerie/src/components/pages/Demo/demo.css
+++ b/gallerie/src/components/pages/Demo/demo.css
@@ -59,6 +59,7 @@
   font-size: 1em;
   width: 90%;
   text-align: left;
+  padding: 0 0 10px 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -109,6 +110,18 @@
   margin: -7px;
   line-height: 2;
   border-top: 1px solid #ededed;
+  font-size: 0.7em;
+}
+
+@media screen and (min-width: 768px) {
+
+  .room_nav-title {
+    padding: initial;
+  }
+
+  .room_nav-description {
+    font-size: 1em;
+  }
 }
 
 .room_slider {
