--- a/gallerie/src/components/pages/Demo/demo.css
+++ b/gallerie/src/components/pages/Demo/demo.css
@@ -111,6 +111,7 @@
   line-height: 2;
   border-top: 1px solid #ededed;
   font-size: 0.7em;
+  z-index: 10;
 }
 
 @media screen and (min-width: 768px) {
