--- a/gallerie/src/App.css
+++ b/gallerie/src/App.css
@@ -3,8 +3,10 @@
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 .container {
+  margin: 0 15%;
   background-color: #fff;
 }
