--- a/gallerie/src/index.css
+++ b/gallerie/src/index.css
@@ -10,7 +10,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .main {
-    margin: 0 15%;
+    overflow-y: scroll;
   }
 }
 
@@ -20,8 +20,7 @@ p {
 }
 
 .content {
-  width: 100%;
-  margin-top: 0;
+  margin: 0 15% 10px;
 }
 
 .content > p, .content > div {
