--- a/gallerie/src/App.css
+++ b/gallerie/src/App.css
@@ -7,6 +7,12 @@
 }
 
 .container {
-  margin: 0 15%;
+  margin: 0;
   background-color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    margin: 0 15%;
+  }
 }
